# CTR-SINK

./: README.md  README_zh.md
configs/: qwen2_movielens_ctrsink.json  qwen3_8b_movielens_ctrsink_inter_sink.json
ctrsink/: data.py  retrieval.py  training.py
ctrsink/modeling/: __init__.py  model.py
ctrsink_open_source/: LICENSE  README_zh.md  pyproject.toml  requirements.txt
ctrsink_open_source/configs/: qwen2_7b_movielens_ctrsink.json  qwen2_7b_movielens_ctrsink_inter_sink.json  qwen2_movielens_ctrsink_inter_sink.json  qwen2_movielens_original.json  qwen3_8b_movielens_ctrsink.json  roberta_movielens_ctrsink.json  roberta_movielens_ctrsink_inter_sink.json
ctrsink_open_source/ctrsink/: __init__.py  config.py
ctrsink_open_source/ctrsink/modeling/: heads.py  inter_sink.py
ctrsink_open_source/data/: README.md
ctrsink_open_source/examples/sample_data/: valid.csv
examples/sample_data/: train.csv
scripts/: evaluate.py  train.py
tests/: test_data.py
