[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctrsink"
version = "0.1.0"
description = "Open-source CTR-Sink training code for LM-based CTR prediction."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch>=2.1",
  "transformers>=4.29.2,<5.0",
  "peft>=0.10",
  "accelerate>=0.29",
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "pyarrow>=14.0",
  "tqdm>=4.66",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ctrsink*"]
